fix z-index

--- a/src/components/DarkModeToggle/DarkModeToggle.module.scss
+++ b/src/components/DarkModeToggle/DarkModeToggle.module.scss
@@ -4,7 +4,7 @@
     position: fixed;
     cursor: pointer;
     top: 10px;
-    z-index: 99999999999999999999999;
+    z-index: 9999;
     right: 10px;
     padding: 10px 8px;
     border-radius: 12px; 
