--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0; 
     right: 0; 
-    z-index: 9999999;
+    z-index: 999;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);  
     background-color: #ffffff; 
   
